--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
     <section class="hero">
         <div class="hero-left">
             <div class="book-display">
-                <img src="表紙1.jpg" alt="RESTART 2025 表紙" class="book-cover">
+                <img src="表紙1.jpg" alt="表紙1.jpg" class="book-cover">
             </div>
         </div>
 
