--- a/restart_q2.html
+++ b/restart_q2.html
@@ -11,6 +11,7 @@
         :root {
             --black: #1A1A1A;
             --white: #FFFFFF;
+            --gray-50: #FAFAFA;
             --gray-100: #F5F5F5;
             --gray-200: #E5E5E5;
             --gray-400: #A3A3A3;
@@ -25,23 +26,29 @@
             box-sizing: border-box;
         }
 
+        html {
+            -webkit-text-size-adjust: 100%;
+        }
+
         body {
             font-family: 'Noto Sans JP', sans-serif;
             background: var(--white);
             color: var(--black);
             line-height: 1.8;
+            font-size: 16px;
         }
 
-        .container {
+        /* ==================== */
+        /* HEADER */
+        /* ==================== */
+        .header {
+            padding: 2rem 2rem;
+            border-bottom: 2px solid var(--black);
+        }
+
+        .header-inner {
             max-width: 800px;
             margin: 0 auto;
-            padding: 3rem 2rem;
-        }
-
-        .header {
-            margin-bottom: 3rem;
-            padding-bottom: 2rem;
-            border-bottom: 2px solid var(--black);
         }
 
         .header-top {
@@ -51,18 +58,18 @@
             margin-bottom: 1.5rem;
         }
 
-        .logo {
+        .header-logo {
             font-size: 0.9rem;
             font-weight: 700;
             letter-spacing: 0.1em;
             color: var(--gray-400);
         }
 
-        .question-num {
+        .header-badge {
             background: var(--green);
             color: var(--white);
             padding: 0.3rem 1rem;
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             font-weight: 700;
             letter-spacing: 0.1em;
         }
@@ -79,10 +86,19 @@
             line-height: 1.9;
         }
 
+        /* ==================== */
+        /* NOTICE */
+        /* ==================== */
         .notice {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+            padding-bottom: 0;
+        }
+
+        .notice-inner {
             background: var(--green-light);
             padding: 1.5rem;
-            margin-bottom: 2rem;
             border-left: 4px solid var(--green);
         }
 
@@ -109,7 +125,13 @@
             margin-bottom: 0.3rem;
         }
 
+        /* ==================== */
+        /* QUESTIONS */
+        /* ==================== */
         .questions {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
             display: flex;
             flex-direction: column;
             gap: 2rem;
@@ -117,7 +139,7 @@
 
         .question-item {
             background: var(--gray-100);
-            padding: 1.5rem;
+            padding: 2rem;
             border-left: 4px solid var(--green);
         }
 
@@ -147,14 +169,16 @@
 
         .question-item textarea {
             width: 100%;
-            min-height: 100px;
+            min-height: 120px;
             padding: 1rem;
             font-family: 'Noto Sans JP', sans-serif;
-            font-size: 1rem;
+            font-size: 16px;
             border: 1px solid var(--gray-200);
             background: var(--white);
             resize: vertical;
             line-height: 1.8;
+            border-radius: 0;
+            -webkit-appearance: none;
         }
 
         .question-item textarea:focus {
@@ -162,10 +186,14 @@
             border-color: transparent;
         }
 
+        /* ==================== */
+        /* ACTIONS */
+        /* ==================== */
         .actions {
-            margin-top: 3rem;
-            padding-top: 2rem;
-            border-top: 1px solid var(--gray-200);
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+            padding-top: 0;
             display: flex;
             gap: 1rem;
             flex-wrap: wrap;
@@ -174,15 +202,22 @@
         .btn {
             display: inline-flex;
             align-items: center;
+            justify-content: center;
             gap: 0.5rem;
             padding: 1rem 2rem;
             font-family: 'Noto Sans JP', sans-serif;
             font-size: 0.95rem;
             font-weight: 700;
             text-decoration: none;
-            cursor: pointer;
             border: 2px solid var(--black);
+            cursor: pointer;
             transition: all 0.3s ease;
+            -webkit-tap-highlight-color: transparent;
+        }
+
+        .btn svg {
+            width: 18px;
+            height: 18px;
         }
 
         .btn-primary {
@@ -205,9 +240,13 @@
             color: var(--white);
         }
 
+        /* ==================== */
+        /* FOOTER */
+        /* ==================== */
         .footer {
-            margin-top: 3rem;
-            padding-top: 2rem;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
             border-top: 1px solid var(--gray-200);
             text-align: center;
         }
@@ -217,7 +256,115 @@
             color: var(--gray-400);
         }
 
+        /* ==================== */
+        /* RESPONSIVE - MOBILE */
+        /* ==================== */
+        @media (max-width: 768px) {
+            .header {
+                padding: 1.5rem;
+                position: sticky;
+                top: 0;
+                background: var(--white);
+                z-index: 100;
+            }
+
+            .header-top {
+                margin-bottom: 1rem;
+            }
+
+            .header-logo {
+                font-size: 0.75rem;
+            }
+
+            .header-badge {
+                padding: 0.25rem 0.6rem;
+                font-size: 0.65rem;
+            }
+
+            .header h1 {
+                font-size: 1.2rem;
+                margin-bottom: 0.8rem;
+            }
+
+            .header p {
+                font-size: 0.9rem;
+            }
+
+            .notice {
+                padding: 1rem;
+                padding-bottom: 0;
+            }
+
+            .notice-inner {
+                padding: 1.2rem;
+                border-left-width: 3px;
+            }
+
+            .notice-title {
+                font-size: 0.85rem;
+            }
+
+            .notice ul {
+                font-size: 0.8rem;
+            }
+
+            .questions {
+                padding: 1rem;
+                gap: 1rem;
+            }
+
+            .question-item {
+                padding: 1.2rem;
+                border-left-width: 3px;
+            }
+
+            .question-item-header {
+                gap: 0.8rem;
+            }
+
+            .question-item-num {
+                font-size: 1.3rem;
+            }
+
+            .question-item h2 {
+                font-size: 1rem;
+            }
+
+            .question-item-hint {
+                font-size: 0.8rem;
+            }
+
+            .question-item textarea {
+                min-height: 100px;
+            }
+
+            .actions {
+                padding: 1.5rem 1rem;
+                flex-direction: column;
+            }
+
+            .btn {
+                width: 100%;
+                padding: 1rem;
+            }
+
+            .footer {
+                padding: 1.5rem 1rem;
+            }
+
+            .footer p {
+                font-size: 0.75rem;
+            }
+        }
+
+        /* ==================== */
+        /* PRINT */
+        /* ==================== */
         @media print {
+            .header {
+                position: static;
+            }
+
             .actions {
                 display: none;
             }
@@ -231,33 +378,14 @@
                 min-height: 80px;
             }
         }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 2rem 1rem;
-            }
-
-            .header h1 {
-                font-size: 1.5rem;
-            }
-
-            .actions {
-                flex-direction: column;
-            }
-
-            .btn {
-                width: 100%;
-                justify-content: center;
-            }
-        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header class="header">
+    <header class="header">
+        <div class="header-inner">
             <div class="header-top">
-                <span class="logo">RESTART 2025</span>
-                <span class="question-num">QUESTION 2</span>
+                <span class="header-logo">RESTART 2025</span>
+                <span class="header-badge">QUESTION 2</span>
             </div>
             <h1>ブランクと入試への不安と向き合う</h1>
             <p>
@@ -265,9 +393,11 @@
                 そんな思いや不安を整理するための質問票です。
                 書いたものを相談窓口に持ち込んでみましょう。
             </p>
-        </header>
+        </div>
+    </header>
 
-        <div class="notice">
+    <div class="notice">
+        <div class="notice-inner">
             <p class="notice-title">相談できる場所</p>
             <ul>
                 <li>発達障害者支援センター・障害者相談支援事業所</li>
@@ -277,90 +407,90 @@
                 <li>大学・専門学校の障害学生支援室・学生支援課</li>
             </ul>
         </div>
-
-        <div class="questions">
-            <div class="question-item">
-                <div class="question-item-header">
-                    <span class="question-item-num">1</span>
-                    <h2>いちばん大きな不安は何か</h2>
-                </div>
-                <p class="question-item-hint">
-                    例：勉強についていけるか、試験がこわい、人間関係、年齢のこと など
-                </p>
-                <textarea placeholder="ここに書いてください..."></textarea>
-            </div>
-
-            <div class="question-item">
-                <div class="question-item-header">
-                    <span class="question-item-num">2</span>
-                    <h2>ブランクへの気持ち</h2>
-                </div>
-                <p class="question-item-hint">
-                    長すぎる気がする／なんとか取り戻せそう／よく分からない など、正直な気持ちを書いてみましょう
-                </p>
-                <textarea placeholder="ここに書いてください..."></textarea>
-            </div>
-
-            <div class="question-item">
-                <div class="question-item-header">
-                    <span class="question-item-num">3</span>
-                    <h2>入試で特に心配なポイント</h2>
-                </div>
-                <p class="question-item-hint">
-                    科目、テストの形式、人前での面接、時間内に解くこと など
-                </p>
-                <textarea placeholder="ここに書いてください..."></textarea>
-            </div>
-
-            <div class="question-item">
-                <div class="question-item-header">
-                    <span class="question-item-num">4</span>
-                    <h2>楽だった勉強のやり方</h2>
-                </div>
-                <p class="question-item-hint">
-                    どんな場面だったか、できるだけ具体的に思い出してみましょう
-                </p>
-                <textarea placeholder="ここに書いてください..."></textarea>
-            </div>
-
-            <div class="question-item">
-                <div class="question-item-header">
-                    <span class="question-item-num">5</span>
-                    <h2>あれば安心できそうな支援</h2>
-                </div>
-                <p class="question-item-hint">
-                    例：別室受験、ゆっくり説明してくれる人、相談できる窓口 など
-                </p>
-                <textarea placeholder="ここに書いてください..."></textarea>
-            </div>
-
-            <div class="question-item">
-                <div class="question-item-header">
-                    <span class="question-item-num">6</span>
-                    <h2>今、相談先になる人・場所</h2>
-                </div>
-                <p class="question-item-hint">
-                    家族・友人・支援者・先生・相談窓口など、思いつくものをすべて書き出してみましょう
-                </p>
-                <textarea placeholder="ここに書いてください..."></textarea>
-            </div>
-        </div>
-
-        <div class="actions">
-            <button class="btn btn-primary" onclick="window.print()">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="6,9 6,2 18,2 18,9"/>
-                    <path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/>
-                    <rect x="6" y="14" width="12" height="8"/>
-                </svg>
-                印刷する
-            </button>
-            <a href="restart_homepage.html" class="btn btn-secondary">ガイドブックに戻る</a>
-        </div>
-
-        <footer class="footer">
-            <p>RESTART 2025 障がい者・グレーゾーンの学び直しガイドブック</p>
-        </footer>
     </div>
+
+    <div class="questions">
+        <div class="question-item">
+            <div class="question-item-header">
+                <span class="question-item-num">1</span>
+                <h2>いちばん大きな不安は何か</h2>
+            </div>
+            <p class="question-item-hint">
+                例：勉強についていけるか、試験がこわい、人間関係、年齢のこと など
+            </p>
+            <textarea placeholder="ここに書いてください..."></textarea>
+        </div>
+
+        <div class="question-item">
+            <div class="question-item-header">
+                <span class="question-item-num">2</span>
+                <h2>ブランクへの気持ち</h2>
+            </div>
+            <p class="question-item-hint">
+                長すぎる気がする／なんとか取り戻せそう／よく分からない など、正直な気持ちを書いてみましょう
+            </p>
+            <textarea placeholder="ここに書いてください..."></textarea>
+        </div>
+
+        <div class="question-item">
+            <div class="question-item-header">
+                <span class="question-item-num">3</span>
+                <h2>入試で特に心配なポイント</h2>
+            </div>
+            <p class="question-item-hint">
+                科目、テストの形式、人前での面接、時間内に解くこと など
+            </p>
+            <textarea placeholder="ここに書いてください..."></textarea>
+        </div>
+
+        <div class="question-item">
+            <div class="question-item-header">
+                <span class="question-item-num">4</span>
+                <h2>楽だった勉強のやり方</h2>
+            </div>
+            <p class="question-item-hint">
+                どんな場面だったか、できるだけ具体的に思い出してみましょう
+            </p>
+            <textarea placeholder="ここに書いてください..."></textarea>
+        </div>
+
+        <div class="question-item">
+            <div class="question-item-header">
+                <span class="question-item-num">5</span>
+                <h2>あれば安心できそうな支援</h2>
+            </div>
+            <p class="question-item-hint">
+                例：別室受験、ゆっくり説明してくれる人、相談できる窓口 など
+            </p>
+            <textarea placeholder="ここに書いてください..."></textarea>
+        </div>
+
+        <div class="question-item">
+            <div class="question-item-header">
+                <span class="question-item-num">6</span>
+                <h2>今、相談先になる人・場所</h2>
+            </div>
+            <p class="question-item-hint">
+                家族・友人・支援者・先生・相談窓口など、思いつくものをすべて書き出してみましょう
+            </p>
+            <textarea placeholder="ここに書いてください..."></textarea>
+        </div>
+    </div>
+
+    <div class="actions">
+        <button class="btn btn-primary" onclick="window.print()">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <polyline points="6,9 6,2 18,2 18,9"/>
+                <path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/>
+                <rect x="6" y="14" width="12" height="8"/>
+            </svg>
+            印刷する
+        </button>
+        <a href="restart_homepage.html" class="btn btn-secondary">ガイドブックに戻る</a>
+    </div>
+
+    <footer class="footer">
+        <p>RESTART 2025 障がい者・グレーゾーンの学び直しガイドブック</p>
+    </footer>
 </body>
 </html>
