--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 学び直しの道を一緒に考えるガイドブックです。
             </p>
             <div class="hero-buttons">
-                <a href="restart_guidebook.pdf" download class="btn btn-primary">
+                <a href="障害者支援の学び直しガイドブック.pdf" download class="障害者支援の学び直しガイドブック.pdf">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                         <polyline points="7,10 12,15 17,10"/>
@@ -743,7 +743,7 @@
                 途中で休んでも、道を変えても、回り道をしてもかまいません。<br>
                 この本が、あなたのそばにあれば幸いです。
             </p>
-            <a href="restart_guidebook.pdf" download class="btn btn-primary">
+            <a href="障害者支援の学び直しガイドブック.pdf" download class="障害者支援の学び直しガイドブック.pdf">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                     <polyline points="7,10 12,15 17,10"/>
